[package]
name = "imeye-rs"
description = "A simple image viewer written in Rust using OpenGL and winit."
license = "BSD-2-Clause"
repository = "https://github.com/Dr-42/imeye-rs"
homepage = "https://github.com/Dr-42/imeye-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "=0.29.15", features = ["rwh_06"] } 
glutin = "0.31"
glutin-winit = "0.4"
gl = "0.14"
image = "0.24"
raw-window-handle = "0.5.2"
